@@ -1,6 +1,7 @@
 package sogang.cnu.backend.security;
 
 import lombok.RequiredArgsConstructor;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
@@ -11,12 +12,16 @@ import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
 
+import java.util.Arrays;
 import java.util.List;
 
 @Configuration
 @RequiredArgsConstructor
 public class SecurityConfig {
     private final JwtTokenProvider jwtTokenProvider;
+
+    @Value("${cors.allowed-origins}")
+    private String[] allowedOrigins;
 
     @Bean
     public PasswordEncoder passwordEncoder() {
@@ -29,8 +34,8 @@ public class SecurityConfig {
                         .configurationSource(request -> {
                             var corsConfig = new CorsConfiguration();
                             corsConfig.setAllowCredentials(true);
-                            corsConfig.setAllowedOrigins(List.of("http://localhost:3000"));
-                            corsConfig.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE","PATCH"));
+                            corsConfig.setAllowedOrigins(Arrays.asList(allowedOrigins));
+                            corsConfig.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "PATCH"));
                             corsConfig.setAllowedHeaders(List.of("*"));
                             return corsConfig;
                         }))
